--- a/sensors/weather.yaml
+++ b/sensors/weather.yaml
@@ -1,14 +1,14 @@
   - platform: moon
-  - platform: yweather
-    woeid: 2122265
-    forecast: 3
-    monitored_conditions:
-      - weather
-      - weather_current
-      - temp_min
-      - temp_max
-      - wind_speed
-      - pressure
-      - visibility
-      - humidity
-      - temperature
+#  - platform: yweather
+#    woeid: 2122265
+#    forecast: 3
+#    monitored_conditions:
+#      - weather
+#      - weather_current
+#      - temp_min
+#      - temp_max
+#      - wind_speed
+#      - pressure
+#      - visibility
+#      - humidity
+#      - temperature
