--- a/sensors/snmp.yaml
+++ b/sensors/snmp.yaml
@@ -12,10 +12,10 @@
 #    name: 'Airport Express WAN Outbound'
 #    unit_of_measurement: 'Mbps'
 #    value_template: '{{((value | int) / 1024 / 1024 / 60) | int}}'
-  - platform: snmp
-    name: 'Airport Express uptime'
-    host: 192.168.1.1
-    baseoid: 1.3.6.1.2.1.1.3.0
-    accept_errors: true
-    unit_of_measurement: 'hours'
-    value_template: '{{((value | int) / 6000 / 60 / 60) | int}}'
+#  - platform: snmp
+#    name: 'Airport Express uptime'
+#    host: 192.168.1.1
+#    baseoid: 1.3.6.1.2.1.1.3.0
+#    accept_errors: true
+#    unit_of_measurement: 'hours'
+#    value_template: '{{((value | int) / 6000 / 60 / 60) | int}}'
